# pyins

./: CONDUCT.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pyins.rst
pyins/: pyins.py
tests/: test_pyins.py
