[tool.poetry]
name = "pyins"
version = "0.1.0"
description = "Python package that help process pics for Instagram posts."
authors = ["Roc Zhang <roc_zhang@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.0"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
sphinx = "^3.1.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
